fix spacing in index file

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 html {
-  font-family: georgia, serif;
-  text-size: 1.125rem;
+  font-family: Georgia, serif;
   line-height: 1.5;
 }
